chore: refactor technologies section

--- a/src/content/sections/en/Technologies.mdx
+++ b/src/content/sections/en/Technologies.mdx
@@ -1,7 +1,7 @@
-import ToolsSection from "../../../layouts/sections/ToolsSection.astro";
+import TechnologiesSection from "../../../layouts/sections/TechnologiesSection.astro";
 
-<ToolsSection class="dark-background">
+<TechnologiesSection class="dark-background">
   <h2 slot="title">What we work with</h2>
 
   This is a selection of the tools and technologies we use on a daily basis. We believe that every programming language, framework, or tool has areas where it excels and areas where it is less suitable. An important factor in our choice of tools is the sustainability and long-term availability of the technologies used.
-</ToolsSection>
+</TechnologiesSection>
