chore: enhance responsiveness

--- a/src/content/pages/de/present/team.mdx
+++ b/src/content/pages/de/present/team.mdx
@@ -11,13 +11,13 @@ import ImpressionsSection from "../../../../layouts/sections/ImpressionsSection.
   Lernen Sie das Team hinter unserem Unternehmen kennen - eine Gruppe von engagierten und qualifizierten Fachleuten, die mit Leidenschaft massgeschneiderte Softwarelösungen entwickeln, die auf die spezifischen Bedürfnisse unserer Kunden zugeschnitten sind. Neben unserer Expertise in der Softwareentwicklung engagieren wir uns auch für die Förderung der Berufsbildung in der Schweiz. Wir sind ein aufgeschlossenes, ganzheitliches und vertrauenswürdiges Team und freuen uns darauf, bald mit Ihnen gemeinsam in die Welt der Bits und Bytes einzutauchen.
 </section>
 
-<Divider firstSegmentColor="var(--color-white)" />
+<Divider firstSegmentColor="var(--color-white)" fixAntialiasingBottom />
 
 <TeamSection class="white-background">
   <h2 slot="title">Porträts</h2>
 </TeamSection>
 
-<Divider firstSegmentColor="var(--color-white)" flipVertical />
+<Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
 
 <ImpressionsSection gallery="team" class="dark-background">
   <h2 slot="title">Impressionen</h2>
